<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<TextView
		android:id="@+id/dia_tv_title"
		android:text="@string/dia_title_location_failed"
		android:layout_width="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="15dp"
		android:textSize="18sp"
		android:textColor="@color/dia_black_2b2d33"
		android:layout_height="wrap_content"/>
	
	<TextView
		android:id="@+id/dia_tv_content"
		android:textSize="16sp"
		android:textColor="@color/dia_gray_4f545a"
		android:layout_gravity="center"
		android:text="@string/dia_content_location_failed"
		android:gravity="center"
		android:lineSpacingExtra="4dp"
		android:layout_marginLeft="25dp"
		android:layout_marginRight="25dp"
		android:layout_marginTop="20dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>
	
	<View
		android:background="@color/dia_white_ed"
		android:layout_width="match_parent"
		android:layout_marginTop="25dp"
		android:layout_height="1dp"/>
	
	<TextView
		android:id="@+id/dia_tv_positive"
		android:text="@string/dia_positive_go_settings"
		android:textSize="18sp"
		android:gravity="center"
		android:textColor="@color/dia_blue_284ffb"
		
		android:layout_width="match_parent"
		android:layout_height="50dp"/>

</LinearLayout>