<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingLeft="30dp"
	android:paddingTop="20dp"
	>
	
	<TextView
		android:id="@+id/dia_tv_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/dia_title_off_car"
		android:textColor="@color/dia_black_333"
		android:textSize="24sp"
		android:textStyle="bold"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>
	
	<View
		android:layout_width="50dp"
		android:layout_height="3dp"
		app:layout_constraintLeft_toLeftOf="@id/dia_tv_title"
		app:layout_constraintTop_toBottomOf="@id/dia_tv_title"
		android:layout_marginTop="10dp"
		android:background="@color/dia_blue_B1D0FF"
		/>
	
	<TextView
		android:id="@+id/dia_tv_content"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginRight="30dp"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/dia_tv_title"
		app:layout_constraintLeft_toLeftOf="@id/dia_tv_title"
		android:text="@string/dia_content_off_car"
		android:textSize="16sp"
		android:lineSpacingExtra="4dp"
		android:textColor="@color/dia_gray_4a"
		android:layout_marginTop="24dp"
		/>
	
	<TextView
		android:id="@+id/dia_tv_negative"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toBottomOf="@id/dia_tv_content"
		android:layout_marginTop="30dp"
		app:layout_constraintLeft_toLeftOf="@id/dia_tv_content"
		android:textSize="18sp"
		android:textColor="@color/dia_gray_ccc"
		android:layout_marginBottom="20dp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent"
		android:text="@string/dia_cancel"
		/>
	
	<ImageView
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		android:src="@drawable/dia_pop_blue_arc"
		android:layout_width="57dp"
		android:layout_height="57dp"/>
	
	<TextView
		android:id="@+id/dia_tv_positive"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintRight_toRightOf="parent"
		android:textSize="18sp"
		android:textColor="@color/dia_black"
		android:layout_marginRight="30dp"
		android:textStyle="bold"
		android:text="@string/dia_positive_go_settings"
		app:layout_constraintBottom_toBottomOf="@id/dia_tv_negative"
		/>
	


</androidx.constraintlayout.widget.ConstraintLayout>