<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingLeft="18dp"
	android:paddingTop="30dp"
	android:paddingRight="18dp"
	android:paddingBottom="30dp">
	
	<TextView
		android:id="@+id/dia_tv_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/dia_title_permission_request"
		android:textColor="@color/dia_black_333"
		android:textSize="16sp"
		android:textStyle="bold"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>
	
	<TextView
		android:id="@+id/dia_tv_content"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="18dp"
		android:text="@string/dia_content_permission_1"
		android:gravity="center"
		android:textColor="@color/dia_gray_666"
		android:textSize="14sp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/dia_tv_title"/>
	
	<Button
		android:id="@+id/dia_tv_positive"
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:layout_marginLeft="30dp"
		android:layout_marginTop="20dp"
		android:layout_marginRight="30dp"
		android:background="@drawable/bg_positive_btn"
		android:text="@string/dia_positive_go_settings"
		android:textColor="@android:color/white"
		android:textSize="14sp"
		app:layout_constraintTop_toBottomOf="@+id/dia_tv_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>