<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingTop="33dp"
    android:paddingRight="18dp"
    android:paddingBottom="23dp">

    <ImageView
        android:id="@+id/dia_iv_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dia_tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/dia_content_pick_alert"
        android:textColor="@color/dia_black_333"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/dia_iv_img" />

    <Button
        android:id="@+id/dia_tv_positive"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_negative_btn"
        android:text="@string/dia_positive_confirm"
        android:textColor="@color/dia_gray_666"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@id/dia_tv_negative"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/dia_tv_negative"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_positive_btn"
        android:text="@string/dia_cancel"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dia_tv_content" />

</androidx.constraintlayout.widget.ConstraintLayout>